Added images, about me and work sectionss

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
-    font-family: cursive, 'Courier New', Courier, monospace;
-    font-size: 20px;
+    font-family: Helvetica, Arial, serif;
+    
 }
