--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Helvetica, Arial, serif;
-    background: linear-gradient(to right, grey, blue, lightblue)
+    background-color: #e5f0f7;
 }
 
 .headshot {
@@ -45,28 +45,63 @@ body {
 }
 
 .flex1 {
-    background-color: white;
-    margin-right: 50px;
-    margin-left: 50px;
     display: flex;
     flex-direction: row;
-    gap: 28px
+    background-color: white;
+    margin-right: 160px;
+    margin-left: 90px;
+    gap: 18px;
+    
+}
+
+.flex1 h1 .flex2 h1{
+    display: inline-flex;
+    
+    
 }
 
 .text    {
    display: block;
    padding:12px;
-   
+   border-left: solid;
 }
 
 .flex2 {
     display: flex;
     flex-direction: row;
-    gap: 54px;
+    background-color: white;
+    margin-right: 160px;
+    margin-left: 81px;
+    
+  
 }
 
 .flex2 img {
-    width: 540px;
-
-
+    display: block;
+    width: 700px;
+    height: 400px;    
+    border-left: solid;
+    padding-left: 19px;
 }
+
+.flex3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items:flex-start;
+    margin-right: 160px;
+    margin-left: 81px;
+}
+
+.card {
+    padding: 10px;
+    width: 250px;
+}
+
+/* align-items: center;
+width: 90%;
+/* Uses the height of the viewport */
+/* height: 100vh;
+margin: 0 auto;
+border-style: solid;
+border-width: 2px; */ */
