--- a/style.css
+++ b/style.css
@@ -1,107 +1,116 @@
 body {
-    font-family: Helvetica, Arial, serif;
-    background-color: #e5f0f7;
+  font-family: Helvetica, Arial, serif;
+  background-color: #e5f0f7;
 }
 
+header {
+  background-color: rgb(95, 93, 93);
+}
 .headshot {
-    position:relative;
-    bottom:22px;
-    display: block;
-    border-radius: 25px;
-    margin-left: 431px;
-    margin-right:auto;
-    width: 200px;
-    height:200px;
-    
-    
+  position: relative;
+  bottom: 22px;
+  display: block;
+  border-radius: 25px;
+  margin-left: 431px;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
 }
 
 #name {
-    border-style: solid;
-    border-width: 0;
-    padding:2px;
-    background-color: lightblue;
-    color:rgb(95, 93, 93);
-    font-weight: bold;
-    width:325px;
-    position: absolute;
-    left: 0px;
-    top: -21px;
-    text-align: right;
-    
+  border-style: solid;
+  border-width: 0;
+  padding: 2px;
+  background-color: lightblue;
+  color: rgb(95, 93, 93);
+  font-weight: bold;
+  width: 325px;
+  position: absolute;
+  left: 0px;
+  top: -21px;
+  text-align: right;
 }
 .topnav {
-    background-color: rgb(95, 93, 93);
-    text-align: right;
-    padding-top:33px;
-    padding-left:10px;
+  text-align: right;
+  padding-top: 33px;
+  padding-left: 10px;
+  margin-right: 100px;
 }
 
 .topnav a {
-    font-size: 20px;
-    color: lightblue;
-    padding: 10px;
-    text-decoration: underline;
+  font-size: 20px;
+  color: lightblue;
+  padding: 10px;
+  text-decoration: underline;
 }
 
 .flex1 {
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    margin-right: 160px;
-    margin-left: 90px;
-    gap: 18px;
-    
+  display: flex;
+  flex-direction: row;
+  margin-right: 160px;
+  margin-left: 90px;
+  gap: 18px;
 }
 
-.flex1 h1 .flex2 h1{
-    display: inline-flex;
-    
-    
-}
-
-.text    {
-   display: block;
-   padding:12px;
-   border-left: solid;
+.text {
+  flex: 2;
+  padding: 12px;
 }
 
 .flex2 {
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    margin-right: 160px;
-    margin-left: 81px;
-    
-  
+  display: flex;
+  flex-direction: row;
+  margin-right: 272px;
+  margin-left: 166px;
 }
 
 .flex2 img {
-    display: block;
-    width: 700px;
-    height: 400px;    
-    border-left: solid;
-    padding-left: 19px;
+  width: 700px;
+  height: 350px;
+  padding-left: 19px;
 }
+/* delete below */
+
+.textcontainer {
+    position: relative;
+    text-align: center;
+    color: rgb(95, 93, 93)
+}
+.pictext {
+    position: absolute;
+    bottom: -21px;
+    left: 25px;
+    font-size: 30px;
+    border: solid;
+    background-color: aliceblue;
+  }
 
 .flex3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items:flex-start;
-    margin-right: 160px;
-    margin-left: 81px;
+  display: flex;
+  align-items: center;
+  margin-right: 278px;
+  margin-left: 263px;
+}
+.card img {
+  width: 345px;
+  height: 350px;
 }
 
-.card {
-    padding: 10px;
-    width: 250px;
+.contact {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-left: 121px;
+  font-size: 22px;
+}
+.bottomnav {
+  display: block;
+  text-align: center;
+  margin-top: 50px;
 }
 
-/* align-items: center;
-width: 90%;
-/* Uses the height of the viewport */
-/* height: 100vh;
-margin: 0 auto;
-border-style: solid;
-border-width: 2px; */ */
+.bottomnav a {
+  font-size: 20px;
+  padding: 64px;
+  text-decoration: underline;
+}
